--- a/public/index.html
+++ b/public/index.html
@@ -57,5 +57,8 @@
       </form>
     </div>
     <h3 class="total-clients" id="total-clients">Total clients: 2</h3>
+
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
