--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
         />
       </div>
       <ul class="message-container" id="message-container">
-        <li class="message-left">
+        <!--  <li class="message-left">
           <p class="message">
             user1
             <span>hi . 29 jan 9:42m</span>
@@ -44,7 +44,7 @@
 
         <li class="message-feedback">
           <p class="feedback" id="feedback">user1 typing a message</p>
-        </li>
+        </li> -->
       </ul>
 
       <form class="message-form" id="message-form">
@@ -59,6 +59,11 @@
     <h3 class="total-clients" id="total-clients">Total clients: 2</h3>
 
     <script src="/socket.io/socket.io.js"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.28.0/moment.min.js"
+      integrity="sha512-Q1f3TS3vSt1jQ8AwP2OuenztnLU6LwxgyyYOG1jgMW/cbEMHps/3wjvnl1P3WTrF3chJUWEoxDUEjMxDV8pujg=="
+      crossorigin="anonymous"
+    ></script>
     <script src="main.js"></script>
   </body>
 </html>
